src-tauri/final_debug.txt

> error[E0433]: failed 
to resolve: could not f
ind `windows_core` in t
he list of imported cra
tes
    --> src\audio_manag
er.rs:71:1
     |
  71 | #[windows::core:
:interface("f8679f50-d1
28-4fd3-acc1-4471cd6972
61")]
     | ^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^ could not find `w
indows_core` in the lis
t of imported crates
     |
>    = note: this error
 originates in the attr
ibute macro `windows::c
ore::interface` (in Nig
htly builds, run with -
Z macro-backtrace for m
ore info)
  System.Management.Aut
omation.RemoteException
> For more information 
about this error, try `
rustc --explain E0433`.
> error: could not comp
ile `tauri-appaudio-swi
tcher` (bin "tauri-appa
udio-switcher") due to 
1 previous error


